Adds more unit tests for Problem class